<resources>
    <string name="app_name">HappyDrink</string>
    <string name="assisstent_titel">persönliche Angaben zur Berechnung</string>
    <string name="assisstent_alter">Dein Alter</string>
    <string name="assisstent_gewicht">Dein Gewicht</string>
    <string name="assisstent_geschlecht">Dein Geschlecht</string>
    <string name="assisstent_alkabbau_txt">Schätze wie schnell dein Körper Alkohol abbauen kann. Für gewöhnlich bauen Frauen bis zu 0.1 Promille pro Stunde ab. Männer können bis zu 0.2 Promille pro Stunde abbauen.</string>
    <string-array name="sex_id">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="sex_title">
        <item>Mann</item>
        <item>Frau</item>
    </string-array>
    <string name="assisstent_status">Dein Status</string>
    <string name="assisstent_txt_hint_alter">Schreib hier dein Alter rein</string>
    <string name="assisstent_txt_hint_gewicht">Schreib hier dein Gewicht rein</string>
    <string name="assisstent_radio_mann">Mann</string>
    <string name="assisstent_radio_woman">Frau</string>
    <string name="allg_btn_ok">OK</string>
    <string name="lizenz_btn_ok">OK</string>
    <string name="assisstent_error_weight">Fehler! Bitte trage dein Gewicht in ganzen Zahlen ein.</string>
    <string name="assisstent_error_age">Fehler! Bitte trage dein Alter in ganzen Zahlen ein.</string>
    <string name="display_anz">GETRÄNKE</string>
    <string name="display_g">Kcal</string>
    <string name="display_promille">PROMILLE</string>
    <string name="display_regler_einheit_menge">ml</string>
    <string name="display_regler_einheit_alk">%</string>
    <string name="counter_create_file">Verzeichnis angelegt zum Speichern.</string>
    <string name="counter_save_successful">Deine Aktualisierung wurde gespeichert.</string>
    <string name="counter_save_successful_end">Deine Party wurde beendet.</string>
    <string name="counter_save_error">Bei deiner Aktualisierung ist ein Fehler passiert!</string>
    <string name="counter_load_error">Letzte Party konnte nicht geladen werden.</string>
    <string name="menu_partyover_txt_text">Möchtest Du wirklich eine neue Party erstellen?</string>
    <string name="menu_partyover_back">Zurück</string>
    <string name="menu_partyover_titel">Neue Party</string>
    <string name="menu_partyover_new_btn">Neue Party</string>
    <string name="sweetDialog_anz_title">Anzahl der Getraenke</string>
    <string name="sweetDialog_alkg_title">Alkoholkalorien</string>
    <string name="sweetDialog_promille_title">Promillewert</string>
    <string name="sweetDialog_anz">Hier siehst Du die Anzahl deiner Getränke.</string>
    <string name="sweetDialog_alkg">Hier siehst Du die Menge an Kalorien, die Du allein durch Alkohol zu Dir nimmst.</string>
    <string name="sweetDialog_promille">Die theoretische Blutalkoholkonzentration (BAK in Promille), ist nur ein hypotehtischer Wert und entspricht nicht deiner tatsächlichen BAK.</string>
    <string name="menu_pers">Dein Profil ändern</string>
    <string name="menu_lizenz">Lizenz</string>
    <string name="menu_akt">Aktualisieren</string>
    <string name="menu_verlauf">Verlauf</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_nachtrag">Ab wann hast Du getrunken?</string>
    <string name="menu_lexika">HappyDrink - Magazin</string>
    <string name="menu_datenschutz">Hinweis zur Datenerhebung</string>
    <string name="assisstent_time_rad_1">gestern</string>
    <string name="assisstent_time_rad_2">heute</string>
    <string name="assisstent_time_text">Trage den letzten Zeitpunkt ein an dem Du noch nüchtern warst. (Erstes alkoholisches Getränk oder ausgenüchtert)</string>
    <string name="rate_txt_0">inahltliche Fehler</string>
    <string name="rate_txt_1">grafische Fehler</string>
    <string name="rate_txt_2">schlechtes Design</string>
    <string name="rate_txt_3">unklare Datenschutzerklärung</string>
    <string name="rate_txt_4">unklare Datenspeicherung</string>
    <string name="rate_txt_5">Bedienung ist umständlich</string>
    <string name="rate_txt_6">keine Verwendung für HappyDrink</string>
    <string name="rate_send">anonym senden</string>
    <string name="rate_title">Deine Meinung</string>
</resources>